Se agrego Curso y se modifico la clase Asignatura

--- a/ProyectoTISJ-ejb/nbproject/project.properties
+++ b/ProyectoTISJ-ejb/nbproject/project.properties
@@ -30,6 +30,7 @@ j2ee.platform.classpath=${j2ee.server.home}/modules/system/layers/base/javax/ws/
 j2ee.server.type=WildFly
 jar.compress=false
 jar.name=ProyectoTISJ-ejb.jar
+jars.in.ejbjar=false
 javac.classpath=
 javac.debug=true
 javac.deprecation=false
