Se agrego facadeUsuario y se modificaron contorladores y manejadores de usuairos con anotaciones para realizar las inyecciones. Se agrego librearia PrimeFaces Se implemento el caso de uso login en el proyeco web.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /nbproject/private/
 /ProyectoTISJ-ejb/nbproject/private/
 /ProyectoTISJ-war/nbproject/private/
+/build/
+/dist/
+/ProyectoTISJ-war/dist/
+/ProyectoTISJ-war/build/
