--- a/ProyectoTISJ-war/nbproject/project.properties
+++ b/ProyectoTISJ-war/nbproject/project.properties
@@ -38,7 +38,8 @@ j2ee.platform.classpath=${j2ee.server.home}/modules/system/layers/base/javax/ws/
 j2ee.server.type=WildFly
 jar.compress=false
 javac.classpath=\
-    ${reference.ProyectoTISJ-ejb.dist}
+    ${reference.ProyectoTISJ-ejb.dist}:\
+    ${libs.primefaces.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
