--- a/ProyectoTISJ-ejb/nbproject/project.properties
+++ b/ProyectoTISJ-ejb/nbproject/project.properties
@@ -22,6 +22,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-io-1.3.2.jar=lib/commons-io-1.3.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -31,7 +32,8 @@ j2ee.server.type=WildFly
 jar.compress=false
 jar.name=ProyectoTISJ-ejb.jar
 jars.in.ejbjar=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-io-1.3.2.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
