--- a/ProyectoTISJ-war/nbproject/project.properties
+++ b/ProyectoTISJ-war/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-io-1.3.2.jar=lib/commons-io-1.3.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -39,7 +40,8 @@ j2ee.server.type=WildFly
 jar.compress=false
 javac.classpath=\
     ${reference.ProyectoTISJ-ejb.dist}:\
-    ${libs.primefaces.classpath}
+    ${libs.primefaces.classpath}:\
+    ${file.reference.commons-io-1.3.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
