--- a/ProyectoTISJ-war/web/WEB-INF/web.xml
+++ b/ProyectoTISJ-war/web/WEB-INF/web.xml
@@ -21,4 +21,8 @@
     <welcome-file-list>
         <welcome-file>/login.xhtml</welcome-file>
     </welcome-file-list>
+    <context-param>
+    <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
+    <param-value>/WEB-INF/functions.taglib.xml</param-value>
+</context-param>
 </web-app>
