--- a/ProyectoTISJ-war/web/WEB-INF/web.xml
+++ b/ProyectoTISJ-war/web/WEB-INF/web.xml
@@ -22,7 +22,11 @@
         <welcome-file>/login.xhtml</welcome-file>
     </welcome-file-list>
     <context-param>
-    <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
-    <param-value>/WEB-INF/functions.taglib.xml</param-value>
-</context-param>
+        <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
+        <param-value>/WEB-INF/functions.taglib.xml</param-value>
+    </context-param>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/Error/Error404.xhtml</location>
+    </error-page>
 </web-app>
