--- a/ProyectoTISJ-war/web/WEB-INF/web.xml
+++ b/ProyectoTISJ-war/web/WEB-INF/web.xml
@@ -29,4 +29,8 @@
         <error-code>404</error-code>
         <location>/Error/Error404.xhtml</location>
     </error-page>
+    <error-page>
+        <exception-type>java.lang.NullPointerException</exception-type>
+        <location>/Error/ErrorInterno.xhtml</location>
+    </error-page>
 </web-app>
