Se agrego filtro para bloquear el acceso directo a paginas sin estar logueado. Se movio bean de editar perfil a paquete interfaz. Se cambio redireccion a error 500 ante cualquier error de java.lang.

--- a/ProyectoTISJ-war/web/WEB-INF/web.xml
+++ b/ProyectoTISJ-war/web/WEB-INF/web.xml
@@ -30,7 +30,7 @@
         <location>/Error/Error404.xhtml</location>
     </error-page>
     <error-page>
-        <exception-type>java.lang.NullPointerException</exception-type>
+        <exception-type>java.lang.Exception</exception-type>
         <location>/Error/Error500.xhtml</location>
     </error-page>
 </web-app>
